--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,9 @@
-#CMakeLists.txt
 cmake_minimum_required(VERSION 3.5)
 
-include($ENV{IDF_PATH}/tools/cmake/project.cmake)
+if (NOT DEFINED PROJECT_NAME)
+  include($ENV{IDF_PATH}/tools/cmake/project.cmake)
 
-list(APPEND EXTRA_COMPONENT_DIRS 
-  components/max31855/components/max31855
-)
+  list(APPEND EXTRA_COMPONENT_DIRS components/max31855)
 
-project(max31855-example)
+  project(max31855-example)
+endif (NOT DEFINED PROJECT_NAME)
